# opencv_tongue

./: .gitignore  README.md
baseImage/: CMakeLists.txt  Makefile  buildrun.sh  colorim.cpp  show.cpp
trainning/: a_sample_window.cpp  sample
